--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "application",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engine": {
+    "node": "12.x"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/moralesanahi75/node-hello-world-lesly.git"
   },
   "keywords": [
-    "nodejs"
+    "nodejs",
+    "heroku"
   ],
   "author": "Lesly Morales",
   "license": "MIT",
